cleanup: 清理冗余代码并建立 TODO 练手体系
删除 ioc.annotation/di 兼容壳与零引用死代码，收敛 TODO 标记为 161 条规范条目；新增 docs/PRACTICE.md 练手路线与 TODO 索引；修复 JDK17 下 CGLIB 测试所需的 add-opens 参数并同步文档。